syntax = "proto3";

option go_package = "crud/pkg/grpc";
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative .\pkg\grpc\userapi.proto
package grpc;

service Userapi{

    rpc GetUser (UserRequest) returns (UserReply){}
    rpc GetUsers (UserRequest) returns (stream UserReply){}
    rpc PostUser (UserPost) returns (UserReply){}
    rpc PutUser (UserPut) returns (UserReply){}
    rpc DeleteUser (UserRequest) returns (UserReply){}
    
}

message UserRequest{
    int64 id = 1;
}

message UserPost{
    int64 id = 1;
    string firstname = 2;
    string lastname = 3;
    int64 age = 4;
}

message UserPut{
    int64 id = 1;
    string firstname = 2;
    string lastname = 3;
    int64 age = 4;
}

message UserReply{
    int64 id = 1;
    string firstname = 2;
    string lastname = 3;
    int64 age = 4;
}